--- a/Challenge01/style.css
+++ b/Challenge01/style.css
@@ -1,7 +1,7 @@
 /* INSTRUCTIONS
  *
  * 1) Limit the total width of
- *    the .intro-conent to about half
+ *    the .intro-content to about half
  *    of it's parent
  *
  * 2) Stop the text from overflowing
